--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
